--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,6 +12,6 @@
         <item>BITS</item>
         <item>Alankrita</item>
         <item>Airport</item>
-        <item>railway station</item>
+        <item>Railway station</item>
     </string-array>
 </resources>
